fixed about page

--- a/src/components/Heroimg2.css
+++ b/src/components/Heroimg2.css
@@ -16,7 +16,7 @@
 
 .hero-img::before{
     content:"";
-    background: url("https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background: url("https://media.istockphoto.com/id/1483363328/vector/green-hacker-interface-screen-code-window-with-keyboard-and-high-tech-ui-vector-hud.webp?s=2048x2048&w=is&k=20&c=qqtewIM8aA5iCoZV-inkThpRXIINDnqoioEfwugDxg0=");
     background-size: cover;
     background-position: center top;
     height: 100%;
