--- a/src/components/About_content.css
+++ b/src/components/About_content.css
@@ -1,48 +1,46 @@
 .about{
     width: 100%;
-    margin: 3rem 0;
+    margin: 2rem 0;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     height: 100%;
+    justify-content: center;
 }
 
-.about .left{
+.resume__container{
+    display: flex;
     text-align: center;
-    margin: auto;
-    padding: 1rem;
-    max-width: 350px;
-}
-
-.about .left p {
-    margin: 1.2rem 0;
-}
-
-.about .right{
-    max-width: 700px;
-}
-
-.right .image__container{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    position: relative;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
-.right .img{
-    min-width: 90%;
-    border: 1px solid #333;
+.my__line{
+    position: relative;
+    height: 2px;
+    background-color: white;
+    width: 15rem;
+    margin-bottom: 20px;
 }
 
-.right .img__top{
-    grid-column: 1/span 8;
-    grid-row: 1;
-    padding-top: 20%;
-    z-index: 6;
+.pdf-container {
+    width: 100vw;
+    height: 100vh;
+}
+  
+.pdf-iframe {
+width: 100%;
+height: 100%;
+}
+  
+  
+.quotes {
+text-align: center; /* Center quotes horizontally */
 }
 
-.right .img__bottom{
-    grid-column: 4/-1;
-    grid-row: 1;
-    z-index: 5;
+.quote {
+font-style: italic; /* Example style */
+margin-bottom: 10px; /* Example margin */
 }
+  
