--- a/src/components/Heroimg2.css
+++ b/src/components/Heroimg2.css
@@ -5,6 +5,10 @@
     position: relative;
 }
 
+.typed-text {
+    color: rgb(248,217,15); /* Change this to the desired color */
+  }  
+
 .heading{
     width: 100%;
     height: 100%;
